@@ -15,6 +15,9 @@ is($smtpd->transaction->sender->address, 'ask @perl.org', 'got the right sender'
 is(($smtpd->command('MAIL FROM:ask@perl.org'))[0], 250, 'MAIL FROM:ask@perl.org');
 is($smtpd->transaction->sender->format, '<ask@perl.org>', 'got the right sender');
 
+is(($smtpd->command('MAIL FROM:ask@[1.2.3.4]'))[0], 250, 'MAIL FROM:ask@[1.2.3.4]');
+is($smtpd->transaction->sender->format, '<ask@[1.2.3.4]>', 'got the right sender');
+
 my $command = 'MAIL FROM:<ask@perl.org> SIZE=1230';
 is(($smtpd->command($command))[0], 250, $command);
 is($smtpd->transaction->sender->format, '<ask@perl.org>', 'got the right sender');
